[tool.poetry]
name = "leadhit"
version = "0.1.0"
description = ""
authors = ["sanek <alexandr.panteleev2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
motor = "^3.3.2"
pytest = "^7.4.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
